--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <dubbo.version>3.0.0</dubbo.version>
     <redisson.version>3.16.3</redisson.version>
     <curator.version>5.2.0</curator.version>
+    <aspectj.version>1.9.7</aspectj.version>
   </properties>
 
   <!-- 依赖仲裁 仅仲裁版本,不会产生依赖-->
@@ -92,6 +93,13 @@
         <groupId>org.apache.curator</groupId>
         <artifactId>curator-recipes</artifactId>
         <version>${curator.version}</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+      <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>${aspectj.version}</version>
       </dependency>
 
     </dependencies>
