--- a/shouguouo4j-spring/pom.xml
+++ b/shouguouo4j-spring/pom.xml
@@ -25,5 +25,9 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+    </dependency>
   </dependencies>
 </project>
