使用Conditional通过各种配置信息控制类的加载

--- a/shouguouo4j-web/src/main/resources/application.yml
+++ b/shouguouo4j-web/src/main/resources/application.yml
@@ -8,7 +8,12 @@ logging:
     org.*: info
 spring:
   rocketmq:
+    enable: false
     namesrvAddr: 127.0.0.1:9876
     producerGroup: shouguouo4j
     consumerGroup: shouguouo4j
     topic: shouguouo4j
+config:
+  enable: true
+  host: 127.0.0.1
+  port: 8081
