--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>shouguouo4j-dubbo</module>
     <module>shouguouo4j-web</module>
     <module>shouguouo4j-middleware</module>
+    <module>shouguouo-netty</module>
   </modules>
 
   <!-- 全局配置 -->
@@ -32,6 +33,7 @@
     <httpclient.version>4.5.13</httpclient.version>
     <rocketmq.version>4.9.2</rocketmq.version>
     <zookeeper.version>3.6.0</zookeeper.version>
+    <netty.version>4.1.76.Final</netty.version>
   </properties>
 
   <!-- 依赖仲裁 仅仲裁版本,不会产生依赖-->
@@ -128,6 +130,11 @@
         <groupId>org.apache.curator</groupId>
         <artifactId>curator-x-discovery</artifactId>
         <version>${curator.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-all</artifactId>
+        <version>${netty.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
