--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <rocketmq.version>4.9.2</rocketmq.version>
     <zookeeper.version>3.6.0</zookeeper.version>
     <netty.version>4.1.76.Final</netty.version>
+    <protobuf.version>3.20.1</protobuf.version>
   </properties>
 
   <!-- 依赖仲裁 仅仲裁版本,不会产生依赖-->
@@ -135,6 +136,11 @@
         <groupId>io.netty</groupId>
         <artifactId>netty-all</artifactId>
         <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-java</artifactId>
+        <version>${protobuf.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
