--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>shouguouo4j-web</module>
     <module>shouguouo4j-middleware</module>
     <module>shouguouo4j-netty</module>
+    <module>shouguouo4j-reactive</module>
   </modules>
 
   <!-- 全局配置 -->
@@ -35,6 +36,7 @@
     <zookeeper.version>3.6.0</zookeeper.version>
     <netty.version>4.1.76.Final</netty.version>
     <protobuf.version>3.20.1</protobuf.version>
+    <rxjava.version>3.1.4</rxjava.version>
   </properties>
 
   <!-- 依赖仲裁 仅仲裁版本,不会产生依赖-->
@@ -141,6 +143,11 @@
         <groupId>com.google.protobuf</groupId>
         <artifactId>protobuf-java</artifactId>
         <version>${protobuf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.reactivex.rxjava3</groupId>
+        <artifactId>rxjava</artifactId>
+        <version>${rxjava.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
