--- a/shouguouo4j-dubbo/pom.xml
+++ b/shouguouo4j-dubbo/pom.xml
@@ -33,5 +33,13 @@
       <groupId>org.apache.curator</groupId>
       <artifactId>curator-x-discovery</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.shouguouo4j</groupId>
+      <artifactId>shouguouo4j-common</artifactId>
+    </dependency>
   </dependencies>
 </project>
