Add logRecord framework

--- a/shouguouo4j-web/pom.xml
+++ b/shouguouo4j-web/pom.xml
@@ -38,5 +38,9 @@
       <groupId>com.shouguouo4j</groupId>
       <artifactId>shouguouo4j-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>cn.monitor4all</groupId>
+      <artifactId>log-record-starter</artifactId>
+    </dependency>
   </dependencies>
 </project>
