--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <netty.version>4.1.76.Final</netty.version>
     <protobuf.version>3.20.1</protobuf.version>
     <rxjava.version>3.1.4</rxjava.version>
+    <logrecord.version>1.4.0</logrecord.version>
   </properties>
 
   <!-- 依赖仲裁 仅仲裁版本,不会产生依赖-->
@@ -149,6 +150,11 @@
         <groupId>io.reactivex.rxjava3</groupId>
         <artifactId>rxjava</artifactId>
         <version>${rxjava.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>cn.monitor4all</groupId>
+        <artifactId>log-record-starter</artifactId>
+        <version>1.4.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
